    - Requires re-generating configure script.
  * Patch openssl10: Fix detection of openssl 1.0.
  * Patch no_ssl2: Don't require client-side SSL2 support.
  * include menuselect.makeopts in the docs directory - let us know what
    modules were not built.
  * Bump Standards version to 3.9.2.0 (no change needed).
  * Upstream prefers chan_ooh323 to chan_h323. Suggest asterisk-ooh323.

  [ Faidon Liambotis ]
  * Switch to the "3.0 (quilt)" package source format.

  [ Paul Belanger ]
  * Depend on libneon27-dev and libical-dev for calendar support.
  * Depend on libsrtp0-dev for SRTP support.
  * When compiling with DEB_BUILD_OPTIONS="debug" enable native Asterisk
    debugging tools.  Specifically DONT_OPTIMIZE, DEBUG_THREADS and
    --enable-dev-mode.
  * Regardless of which asterisk-voicemail-* is installed (each package
    conflicts on each other), the name of the module is now
    app_voicemail.so.
  * Fix a bug with app_voicemail-*.exports.in not being copied properly.

 -- Tzafrir Cohen <tzafrir@debian.org>  Mon, 25 Apr 2011 21:46:51 +0300

asterisk (1:1.6.2.9-2) unstable; urgency=high

  [ Tzafrir Cohen ]
  * Bump Standards version to 3.9.0 (no change needed).
  * rtcp_cli_fix: Backport a silly CLI parsing issue. (Closes: #589736)
  * Patch typos: fix a few typos in the source.
  * Patch man_hyphen: fix hyphen/minus issues in man pages.
  * Remove useless binaries aelparse, conf2ael and muted.

  [ Faidon Liambotis ]
  * Change the way that we read include files, to accommodate for changes
    in GCC 4.4. Taken from upstream's SVN, thanks to Peter Allgeyer for the
    patch and Stefan Bauer for preparing an upload. (Closes: #594190)
  * Set urgency high for a squeeze-targetted RC bug-fixing upload.

 -- Faidon Liambotis <paravoid@debian.org>  Tue, 07 Sep 2010 21:52:54 +0300

asterisk (1:1.6.2.9-1) unstable; urgency=low

  * New upstream release (Closes: #585156).
  - Patch dahdi_fxs_false_ringing removed: merged upstream.