@@ -1,2 +1,0 @@
-usr/share/asterisk/sounds
-usr/share/asterisk/moh
