@@ -1,1 +1,0 @@
-asterisk-sounds-main: package-contains-empty-directory
