@@ -1,40 +1,0 @@
-#! /bin/sh
-
-set -e
-
-# summary of how this script can be called:
-#        * <postinst> `configure' <most-recently-configured-version>
-#        * <old-postinst> `abort-upgrade' <new version>
-#        * <conflictor's-postinst> `abort-remove' `in-favour' <package>
-#          <new-version>
-#        * <deconfigured's-postinst> `abort-deconfigure' `in-favour'
-#          <failed-install-package> <version> `removing'
-#          <conflicting-package> <version>
-
-case "$1" in
-    configure)
-	update-alternatives --install \
-	    /usr/share/asterisk/sounds/en asterisk-prompt-en \
-	    /usr/share/asterisk/sounds/en_US_f_Allison 50
-	update-alternatives --install \
-	    /usr/share/asterisk/sounds/en_US asterisk-prompt-en-us \
-	    /usr/share/asterisk/sounds/en_US_f_Allison 50
-    ;;
-
-    abort-upgrade|abort-remove|abort-deconfigure)
-    ;;
-
-    *)
-        echo "postinst called with unknown argument \`$1'" >&2
-        exit 1
-    ;;
-esac
-
-# dh_installdeb will replace this with shell code automatically
-# generated by other debhelper scripts.
-
-#DEBHELPER#
-
-exit 0
-
-
