@@ -1,7 +1,0 @@
-#! /bin/sh -e
-
-update-alternatives --remove asterisk-prompt-en    /usr/share/asterisk/sounds/en_US_f_Allison
-update-alternatives --remove asterisk-prompt-en-us /usr/share/asterisk/sounds/en_US_f_Allison
-
-
-#DEBHELPER#
