@@ -164,11 +164,6 @@ install-indep: build-indep
 	dh_installdirs -i
 
 	$(FETCH_ENV) $(MAKE) $(BUILDFLAGS) DESTDIR=$(CURDIR)/debian/tmp install samples
-	rm -rf $(CURDIR)/debian/tmp/usr/share/asterisk/sounds/es
-	rm -rf $(CURDIR)/debian/tmp/usr/share/asterisk/sounds/fr
-	mv $(CURDIR)/debian/tmp/usr/share/asterisk/sounds/en \
-	   $(CURDIR)/debian/tmp/usr/share/asterisk/sounds/en_US_f_Allison
-
 	dh_install -i --sourcedir=debian/tmp
 	dh_lintian -i
 
