@@ -33,6 +33,9 @@ asterisk (1:1.8.3.3-1) unstable; urgency=high
     modules were not built.
   * Bump Standards version to 3.9.2.0 (no change needed).
   * Upstream prefers chan_ooh323 to chan_h323. Suggest asterisk-ooh323.
+  * Drop asterisk-sounds-main: we already have that functionality the
+    asterisk-core-sounds packages.
+  * Recommend a moh (music-on-hold) package to have music played on hold.
 
   [ Faidon Liambotis ]
   * Switch to the "3.0 (quilt)" package source format.
